# qik

./: .gitattributes  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  devops.py  environment.yml  footing.yaml  mkdocs.yml  pyproject.toml  settings.py  tox.ini
.circleci/: config.yml
docs/: caching.md  ci.md  commands.md  context.md  contributing.md  cookbook.md  cookbook_cicd.md  cookbook_cli.md  cookbook_commands.md  cookbook_intro.md  cookbook_spaces.md  dependencies.md  errors.md  guide.md  home.md  index.md  installation.md  plugin_intro.md  plugin_pygraph.md  plugin_s3.md  plugin_uv.md  plugins.md  release_notes.md  requirements.txt  resources.md  roadmap.md  selectors.md  spaces.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: spaces.md  why.md
docs/css/: home.css  mkdocs-material.css
docs/overrides/: home.html
docs/overrides/partials/: copyright.html
qik/: __init__.py  arch.py  cache.py  cli.py  cmd.py  conf.py  conf_bak.py  console.py  ctx.py  dep.py  errors.py  file.py  func.py  hash.py  lazy.py  logger.py  merge.sh  plugin.py  runnable.py  runner.py  s3.py  shell.py  space.py  unset.py  venv.py  version.py  watcher.py
qik/graph/: cmd.py  core.py  qik.toml
qik/pygraph/: cmd.py  conf.py  core.py  dep.py  qik.toml  qikplugin.py  utils.py
qik/s3/: cache.py  qikplugin.py
qik/s3p/: qikplugin.py
qik/tests/: test_arch.py  test_hash.py  test_integration.py  test_lazy.py
qik/uv/: cmd.py  conf.py  qik.toml  qikplugin.py  utils.py  venv.py
test_project/: constraint.in  other.env  override.env  qik.toml  req2.in  requirements-lock.txt  requirements.in  requirements.txt
test_project/.qik/artifacts/graph.analyze/: analzye.a.json  analzye.b_module.json  analzye.nest.json
test_project/.qik/artifacts/graph.build/: graph.json
test_project/.qik/artifacts/graph.lock/: lock.a.default.json  lock.a.json  lock.b.default.json  lock.b.json  lock.b.other.json  lock.nest.c.json  lock.nest.c.other.json
test_project/.qik/artifacts/pygraph.build/: graph.json
test_project/.qik/artifacts/pygraph.lock/: lock.a.default.json  lock.b.default.json  lock.b.other.json  lock.nest.c.other.json
test_project/.qik/artifacts/qik.uv.lock/: requirements-default-lock.txt  requirements-other-lock.txt
test_project/.qik/artifacts/uv.lock/: requirements-default-lock.txt  (+5 more)
test_project/a/: hello.py
test_project/a/aa/: hello.py
test_project/b/: hello.py  qik.toml
test_project/b/bb/: aa.py
test_project/nest/c/: hi.py
(+95 files in other folders)
